Changed pid temp files to use 'java.io' features + changed startScripts to enable several instances of MZmine. (Unique instance ID - gets rid of MZmine closing instance to interfere with temp files of the still running ones).
Former-commit-id: c3bfaad6b80f8253dde43d45964cef1cdd87f0c6